<resources>
    <string name="app_name">YBook</string>
    <string name="send_email_link">Please tell us your email, so we can help you create a new
    password!</string>
    <string name="send_email_link_button">SEND</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="loginButton">Log In</string>
    <string name="signUpButton">Sign Up</string>
    <string name="forgotPasswordLink">I forgot my password</string>
    <string name="bookListTitle">My Book List</string>
    <string name="bookTitle">Title</string>
    <string name="bookType">Type</string>
    <string name="bookAuthor">Author</string>
    <string name="bookYearPublished">Year Published</string>
    <string name="bookNumPages">Number of Pages</string>
    <string name="bookComments">Comments</string>
    <string name="bookSave">Save</string>
    <string name="bookDelete">Delete</string>
    <string name="addBook">Add/Edit Book</string>
    <string name="favoriteBook">Favorite!</string>
    <string name="itemTitle">Item</string>
    <string name="favIconBorder">favIcon</string>
    <string name="addIconText">addIcon</string>
    <string name="profileTitle">Profile</string>
    <string name="chooseProfileImage">Choose image...</string>
    <string name="logout">Log out</string>
</resources>
